--- a/public/templates/church.html
+++ b/public/templates/church.html
@@ -81,7 +81,7 @@
     <div class="jumbotron">
       <h1>Ängelholms Kyrka</h1>
       <p class="lead">Ängelholms kyrka hittar ni mitt i hjärtat av staden. Den nuvarande kyrkan byggdes på 1700-talet på samma plats som kyrkan som danskarna brände ned 1565  <a href="https://www.svenskakyrkan.se/default.aspx?id=692189">Ängelholms Kyrka</a> </p>
-      <p><img src="templates/angelholm_church.jpg" alt="Ängelholms Kyrka" style="width:100%;height:100%;"></p>
+      <p><img src="images/angelholm_church.jpg" alt="Ängelholms Kyrka" style="width:100%;height:100%;"></p>
     </div>
     <!-- Example row of columns -->
     <div class="row">
