Added template for startpage

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" data-ui-sref="home.startpage">Startsida</a>
+                <a class="navbar-brand" data-ui-sref="home.startpage">E <span class="glyphicon glyphicon-heart" aria-hidden="true"></span> M</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
