--- a/public/templates/startpage.html
+++ b/public/templates/startpage.html
@@ -9,6 +9,24 @@
     <!-- Example row of columns -->
     <div class="row">
       <div class="col-lg-4">
+        <h2>Brudnäbb 2</h2>
+        <p class="text-danger">As of v8.0, Safari exhibits a bug in which resizing your browser horizontally causes rendering errors in the justified nav that are cleared upon refreshing.</p>
+        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+        <p><a class="btn btn-primary" href="#" role="button">Se detaljer &raquo;</a></p>
+      </div>
+      <div class="col-lg-4">
+        <h2>Presenter</h2>
+        <p>Vi önskar oss inget särskilt utan är bara jätteglada för dem som vill vara med och fira vår stora dag tillsammans med oss. Är det ändå så att man känner att man vill ge något skulle vi i så fall bli glada för ett bidrag till vår bröllopsresa</p>        
+     </div>
+      <div class="col-lg-4">
+        <h2>Tärna 1</h2>
+        <p class="text-danger">As of v8.0, Safari exhibits a bug in which resizing your browser horizontally causes rendering errors in the justified nav that are cleared upon refreshing.</p>
+        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+        <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>  
+      </div>
+    </div>    
+    <div class="row">
+      <div class="col-lg-4">
         <h2>Bruden</h2>
         <p class="text-danger">As of v8.0, Safari exhibits a bug in which resizing your browser horizontally causes rendering errors in the justified nav that are cleared upon refreshing.</p>
         <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
