--- a/public/templates/party.html
+++ b/public/templates/party.html
@@ -34,59 +34,59 @@
     </div>
     <!-- Example row of columns -->
     <div class="row">
-      <div class="col-lg-4">
+      <div class="col-sm-4">
         <h2>Allmän information</h2>
           <p>
             Är det så att man känner för att hålla tal eller göra något annat upptåg under middagen är det bra att anmäla detta till någon utav toastmastrarna i förväg så att de kan planera. Kontaktuppgifter 
           </p>
         <p><a class="btn btn-primary" href="#" role="button">Mer information &raquo;</a></p>
       </div>
-      <div class="col-lg-4">
+      <div class="col-sm-4">
         <h2>Margretetorp</h2>
           <p>
             Lite mer information om Margretetorp dock mer kortfattat än det som finns på deras egen hemsida
           </p>
       </div>
-      <div class="col-lg-4">
-        <h2>Mumbo jumbo</h2>
-            Vet inte vad som ska stå här eller ifall vi kanske ska ta bort det här fältet
+      <div class="col-sm-4">
+        <h2>Meny</h2>
+            Här kommer kvällens meny att presenteras
       </div>
     </div>    
     <div class="row">
-      <div class="col-lg-4">
+      <div class="col-sm-4">
         <h2>Toastmaster 1</h2>
           <p>
             Här kommer det komma lite information om vem som kommer vara toastmaster nr 1. 
           </p>
         <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
       </div>
-      <div class="col-lg-4">
+      <div class="col-sm-4">
         <h2>Toastmaster 2</h2>
           <p>
             Här kommer komma lite information om vem som kommer vara toastmaster nr 2
           </p>
       </div>
-      <div class="col-lg-4">
+      <div class="col-sm-4">
         <h2>Hitta till festlokalen</h2>
             <div id="map" style="height:300px"></div>
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4">
+      <div class="col-sm-4">
         <h2>Sånger</h2>
           <p>
             Varje fest värd namnet kräver att man har ett gäng låtar som man kan sjunga under middagen 
           </p>
           <p><a class="btn btn-primary" href="#" role="button">Sånger &raquo;</a></p>
       </div>
-      <div class="col-lg-4">
+      <div class="col-sm-4">
         <h2>Regler</h2>
           <p>
             Det är ju viktigt att man uppför sig när man är på kalas. Är det någon som inte har koll på detta är det bara att kika in i regelboken.
           </p>
           <p><a class="btn btn-primary" href="#" role="button">Regelbok &raquo;</a></p>
       </div>
-      <div class="col-lg-4">
+      <div class="col-sm-4">
         <h2>Var ska man sitta?</h2>
             För att vara extra förberedd och för att undvika evetuella missöden med att man skulle sätta sig på fel plats under festen kan det vara bra att plugga in placeringslistan redan innan. 
           </p>
