--- a/public/templates/living.html
+++ b/public/templates/living.html
@@ -84,38 +84,44 @@ function setMarkers(map) {
       <div class="col-sm-4">
         <h2>Valhall Park</h2>
         <p>Valhall park finner ni strax väster om Ängelholm. Hotellet ingår i Coops hotellerbjudande och finns beläget på den gamla flygflotiljens område brevid Ängelholms flygplats</p>
-        <p><br><a target="_blank" class="btn btn-primary" href="http://hotelvalhallpark.se/" role="button">Hotellets Hemsida &raquo;</a></p>
+        <p><img src="images/Valhallpark.jpg" alt="Margretetorp" style="width:100%;height:100%;"></p>
+        <p><a target="_blank" class="btn btn-primary" href="http://hotelvalhallpark.se/" role="button">Hotellets Hemsida &raquo;</a></p>
         <p><a target="_blank" class="btn btn-primary" href="https://www.coophotellpremie.com/" role="button">Coop &raquo;</a></p>
         
       </div>
       <div class="col-sm-4">
         <h2>Riverside Hotell</h2> 
-        Mitt i centrum i hjärtat av ängelholm hittar man Riverside hotell. Här kan man völja att bo antigen i vanliga hotellrum eller så kan man dessutom välja lägenhet. Priser varierar efter efterfrågan men en sökning idag 10/4 får jag upp ett dubbelrum för 2 personer för 1280 SEK och en lägenhet för 4 personer för 1800 SEK 
-        <p><br><a target="_blank" class="btn btn-primary" href="http://www.hotelriverside.se/" role="button">Hotellets Hemsida &raquo;</a></p>         
+        <p>Mitt i centrum i hjärtat av ängelholm hittar man Riverside hotell. Här kan man völja att bo antigen i vanliga hotellrum eller så kan man dessutom välja lägenhet. Priser varierar efter efterfrågan men en sökning idag 10/4 får jag upp ett dubbelrum för 2 personer för 1280 SEK och en lägenhet för 4 personer för 1800 SEK</p>
+        <p><img src="images/Riverside.jpeg" alt="Margretetorp" style="width:100%;height:100%;"></p> 
+        <p><a target="_blank" class="btn btn-primary" href="http://www.hotelriverside.se/" role="button">Hotellets Hemsida &raquo;</a></p>         
       </div>
       <div class="col-sm-4">
         <h2>Erikslund</h2>
-        Erikslund ligger alldeles söder om Ängelholm, närmare bestämt vid den södra infarten från E6. Vill man göra sig extra fin inför festen, eller varför inte koppla av ordentligt efteråt, så kan man passa pa att ta en tur till hotellets egna SPA. Även detta hotell ingår i COOP:s hotelerbjudnde.
-        <p><br><a target="_blank" class="btn btn-primary" href="http://www.hotellerikslund.se/sv" role="button">Hotellets Hemsida &raquo;</a></p> 
+        <p>Erikslund ligger alldeles söder om Ängelholm, närmare bestämt vid den södra infarten från E6. Vill man göra sig extra fin inför festen, eller varför inte koppla av ordentligt efteråt, så kan man passa pa att ta en tur till hotellets egna SPA. Även detta hotell ingår i COOP:s hotelerbjudnde.</p>
+        <p><img src="images/Erikslund.jpg" alt="Margretetorp" style="width:100%;height:100%;"></p>
+        <p><a target="_blank" class="btn btn-primary" href="http://www.hotellerikslund.se/sv" role="button">Hotellets Hemsida &raquo;</a></p> 
         <p><a target="_blank" class="btn btn-primary" href="https://www.coophotellpremie.com/" role="button">Coop &raquo;</a></p>
       </div>
     </div>
     <div class="row">
       <div class="col-sm-4">
         <h2>Margretetorp</h2>
-        <p >Margrete torp är det perfekta valet för den som vill ha krypavstånd hem från festen. Ett standard rum kan man få från 1400 kr per natt ifall man bokar på hotellets hemsida</p>
-        <p><br><a target="_blank" class="btn btn-primary" href="http://www.margretetorp.se/sv/hotell/boka-online.aspx" role="button">Hotellets Hemsida &raquo;</a></p>
+        <p>Margrete torp är det perfekta valet för den som vill ha krypavstånd hem från festen. Ett standard rum kan man få från 1400 kr per natt ifall man bokar på hotellets hemsida</p>
+        <p><img src="images/margretetorp.jpeg" alt="Margretetorp" style="width:100%;height:100%;"></p>
+        <p><a target="_blank" class="btn btn-primary" href="http://www.margretetorp.se/sv/hotell/boka-online.aspx" role="button">Hotellets Hemsida &raquo;</a></p>
       </div>
       <div class="col-sm-4">
         <h2>Rasta Hallandsåsen</h2> 
-        Detta alternativ är det som ligger näst närmast festlokalen. Det här hotellet är dessutom ett lite billigare alternativ än de andra. Så det är detta alternativ som man ska välja ifall man vill spendera pengarna i baren istället för att sova bekvämt =).
-        Ett dubbelrum kan man får för runt 750 SEK
-        <p><br><a target="_blank" class="btn btn-primary" href="http://www.rasta.se/hallandsasen/hotell/" role="button">Hotellets Hemsida &raquo;</a></p>      
+        <p>Detta alternativ är det som ligger näst närmast festlokalen. Det här hotellet är dessutom ett lite billigare alternativ än de andra. Så det är detta alternativ som man ska välja ifall man vill spendera pengarna i baren istället för att sova bekvämt =).
+        Ett dubbelrum kan man får för runt 750 SEK</p>
+        <p><img src="images/RastaHallandsas.jpg" alt="Margretetorp" style="width:100%;height:100%;"></p>
+        <p><a target="_blank" class="btn btn-primary" href="http://www.rasta.se/hallandsasen/hotell/" role="button">Hotellets Hemsida &raquo;</a></p>      
      </div>
       <div class="col-sm-4">
         <h2>Kvinnaböske Krog & Hotel</h2>
-        Här är allt guld och gröna skogar. I fall man ska tro traktens kändis i alla fall. Dubbelrum från 1295 SEK
-        <p><br><a target="_blank" class="btn btn-primary" href="http://www.kvinnaboske.se/" role="button">Hotellets Hemsida &raquo;</a></p> 
+        <p>Här är allt guld och gröna skogar. I fall man ska tro traktens kändis i alla fall. Dubbelrum från 1295 SEK</p>
+        <p><img src="images/Kvinnaboske.jpg" alt="Margretetorp" style="width:100%;height:100%;"></p>
+        <p><a target="_blank" class="btn btn-primary" href="http://www.kvinnaboske.se/" role="button">Hotellets Hemsida &raquo;</a></p> 
       </div>
     </div>
   </div> <!-- /container -->
