--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,29 +22,29 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" data-ui-sref="home.startpage">E <span class="glyphicon glyphicon-heart" aria-hidden="true"></span> M</a>
+                <a data-toggle="collapse" data-target=".navbar-collapse" class="navbar-brand" data-ui-sref="home.startpage">E <span class="glyphicon glyphicon-heart" aria-hidden="true"></span> M</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a data-ui-sref="home.church">Kyrkan</a>
+                        <a data-toggle="collapse" data-target=".navbar-collapse" data-ui-sref="home.church">Kyrkan</a>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav">
                     <li>
-                        <a data-ui-sref="home.party">Festen</a>
+                        <a data-toggle="collapse" data-target=".navbar-collapse" data-ui-sref="home.party">Festen</a>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav">
                     <li>
-                        <a data-ui-sref="home.living">Boende</a>
+                        <a data-toggle="collapse" data-target=".navbar-collapse" data-ui-sref="home.living">Boende</a>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav">
-                      <li>
-                          <a data-ui-sref="home.contact">Kontakta Oss</a>
-                      </li>
-                  </ul>
+                    <li>
+                        <a data-toggle="collapse" data-target=".navbar-collapse" data-ui-sref="home.contact">Kontakta Oss</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
