Added functionality to lock drag on google maps

--- a/public/templates/church.html
+++ b/public/templates/church.html
@@ -7,7 +7,8 @@
 
     var map = new google.maps.Map(document.getElementById('map'), {
         zoom: 13,
-        center: myLatLng
+        center: myLatLng,
+        draggable: !("ontouchend" in document)
     });
       
     setMarkers(map);
