Added info on startpage and party page

--- a/public/templates/startpage.html
+++ b/public/templates/startpage.html
@@ -3,62 +3,55 @@
     <!-- Jumbotron -->
     <div class="jumbotron">
       <h1>Välkomna</h1>
-      <p class="lead">Här kommer vi presentera lite matnyttig information inför det stundande brölloppet</p>
+      <p class="lead">Här kommer vi presentera lite matnyttig information inför det stundande brölloppet. Förhoppningen är att allt efter som uppdatera och utveckla sidan ända fram till den stora dagen D</p>
       <p></p>
     </div>
     <!-- Example row of columns -->
     <div class="row">
-      <div class="col-lg-4">
-        <h2>Brudnäbb 2</h2>
-        <p class="text-danger">As of v8.0, Safari exhibits a bug in which resizing your browser horizontally causes rendering errors in the justified nav that are cleared upon refreshing.</p>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+      <div class="col-sm-4">
+        <h2>Resa till Ängelholm</h2>
+        <p>Det finns många sätt att ta sig till Ängelholm det går att komma hit med både buss, bil, tåg eller flyg då vi faktiskt har en egen flygplats i vår fina lilla stad. Flyg alternativet passar endast de som reser från Stockholmstrakten. För att ta sig från flygplatsen kan man antigen ta flygbuss som finns tillgänglit vid varje avgång eller taxi.
+        Väljer man att resa med tåg så kommer man komma in till centrala Ängelholm med bara några minuters gångväg ifrån kyrkan.
+
         <p><a class="btn btn-primary" href="#" role="button">Se detaljer &raquo;</a></p>
       </div>
-      <div class="col-lg-4">
+      <div class="col-sm-4">
         <h2>Presenter</h2>
         <p>Vi önskar oss inget särskilt utan är bara jätteglada för dem som vill vara med och fira vår stora dag tillsammans med oss. Är det ändå så att man känner att man vill ge något skulle vi i så fall bli glada för ett bidrag till vår bröllopsresa</p>        
      </div>
-      <div class="col-lg-4">
-        <h2>Tärna 1</h2>
-        <p class="text-danger">As of v8.0, Safari exhibits a bug in which resizing your browser horizontally causes rendering errors in the justified nav that are cleared upon refreshing.</p>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>  
-      </div>
     </div>    
     <div class="row">
-      <div class="col-lg-4">
-        <h2>Bruden</h2>
-        <p class="text-danger">As of v8.0, Safari exhibits a bug in which resizing your browser horizontally causes rendering errors in the justified nav that are cleared upon refreshing.</p>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+      <div class="col-sm-4">
+        <h2>Om oss</h2>
+        <p>Det har nu gått 10 år sen vi först träffade varann på den korridor som vi båda bodde på. Helt plötsligt försökte man tillbringa så mycket tid som möjligt i korridorens kök eller allrum ihopp om att den andre skulle vara där. Så nu tio år senare tyckte vi att det var dags att äntligen göra slag i saken och säga Ja till varandra i närvaro av våra vänner och bekanta</p>
         <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
       </div>
-      <div class="col-lg-4">
-        <h2>Brudgummen</h2> 
+      <div class="col-sm-4">
+        <h2>Matilda</h2> 
         <p class="text-danger">As of v8.0, Safari exhibits a bug in which resizing your browser horizontally causes rendering errors in the justified nav that are cleared upon refreshing.</p>
         <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
         <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>                   
       </div>
-      <div class="col-lg-4">
-        <h2>Brudnäbb 1</h2>
-        <p class="text-danger">As of v8.0, Safari exhibits a bug in which resizing your browser horizontally causes rendering errors in the justified nav that are cleared upon refreshing.</p>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+      <div class="col-sm-4">
+        <h2>Emil</h2>
+        <p>Den oförbättligt nördiga bohusläningen som fann kunskap och kärlek i Kalmar men som på senre tid blivit en patriotisk skåning. (Har dock vissa svårigheter med språket fortfarande). Dagarna fördriver jag med systemutveckling och på senare tid med mer inriktining på test och på web. På friditen gör man det samma men försöker även pyssla med både Musik och Fotografering när det finns tid över</p>
         <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4">
+      <div class="col-sm-4">
         <h2>Brudnäbb 2</h2>
         <p class="text-danger">As of v8.0, Safari exhibits a bug in which resizing your browser horizontally causes rendering errors in the justified nav that are cleared upon refreshing.</p>
         <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
         <p><a class="btn btn-primary" href="#" role="button">Se detaljer &raquo;</a></p>
       </div>
-      <div class="col-lg-4">
+      <div class="col-sm-4">
         <h2>Bestman</h2>
         <p class="text-danger">As of v8.0, Safari exhibits a bug in which resizing your browser horizontally causes rendering errors in the justified nav that are cleared upon refreshing.</p>
         <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
         <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>         
      </div>
-      <div class="col-lg-4">
+      <div class="col-sm-4">
         <h2>Tärna 1</h2>
         <p class="text-danger">As of v8.0, Safari exhibits a bug in which resizing your browser horizontally causes rendering errors in the justified nav that are cleared upon refreshing.</p>
         <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
